--- a/arrow-conv.html
+++ b/arrow-conv.html
@@ -20,9 +20,9 @@
     <p>
         We just like random interactivity in the site, including a fun effect if you hover over <span id="hover-this">        <b>this.</b></span>
     </p>
-    <p onmouseover="mouseOverFunction(this)">
+    <p onmouseover="mouseOverFunction(this)" id="color-set" onclick="setBackgroundColorById()">
         Another task: This should be another feature. 
-        I want to click anywhere in this paragraph tag and I want to be able to change the background color to whatever is in this input: <input type="text"/>.
+        I want to click anywhere in this paragraph tag and I want to be able to change the background color to whatever is in this input: <input type="text" id="input-color"/>.
     </p>
     <script>
         document.getElementById("button").onclick = () => {
@@ -40,8 +40,8 @@
         getValueFromId = (id) => {
             return document.getElementById(id).value;
         }
-        setBackgroundColorById = (id, color) => {
-            document.getElementById(id).style = "background-color: " + color;
+        setBackgroundColorById = () => {
+            document.getElementById("color-set").style = "background-color: " + document.getElementById("input-color").value;
         }
         mouseOverFunction = (el) => {
             el.style = "background-color: black";
